--- a/css/styles.css
+++ b/css/styles.css
@@ -65,8 +65,7 @@ section.top-page {
     margin-top: 50px;
     margin-bottom: 10px;
    border: 2px;
-   border-style: solid;
-    /*padding: 10px;*/
+   border-style: solid ;
    width: 100%;
    /*box-shadow: 10px 10px 10px rgb(78, 116, 90);*/
 }
@@ -88,32 +87,46 @@ section.top-page {
 .table-container{
     font-size:  18px;
     font-family: 'Arial', cursive;
+    width:83%;
+    border: 1px;
     margin-left: auto;
     margin-right: auto ;
     background-color:white;
+    /*border: 2px solid black;*/
 }
 .map-container{
     border: 2px solid black;
+    /*width:140%;
+    height:80%;*/
     margin-left: auto;
     margin-right: auto ;
     margin-top: 20px;
     margin-bottom: 20px;
-    padding: 20px;
+    padding: 20px;*/
     box-shadow: 20px 20px 20px rgb(78, 116, 90);
 
 }
 .key-container{
-    font-size:  22px;
+    font-size:  18px;
     font-family: 'Arial', cursive;
-    color: rgb(78, 116, 90);
+
 
 }
 .button-container{
-    font-size:  22px;
-    margin-left: auto;
-    margin-right: auto ;
-    left: 50%;
+    font-size:  18px;
     font-family: 'Arial', cursive;
-    color: white;
+    color: white
     background-color:rgb(78, 116, 90);
+}
+.key-cell{
+    font-size:  18px;
+    font-family: 'Arial', cursive;
+    color: grey
+    background-color:white;
+}
+.val-cell{
+    font-size:  18px;
+    font-family: 'Monospace', cursive;
+    font-color: red
+    background-color:red;
 }
