--- a/css/styles.css
+++ b/css/styles.css
@@ -74,11 +74,11 @@ section.top-page {
     /*border: 5px solid rgb(141, 23, 121);  */
     /*border: 30 pix solid green;  */
     font-size:  30px;
-    font-family: 'Arial', cursive;
-    margin-left: 15px;
-    margin-right: 150px;
+    font-family: 'Calibri', cursive;
+    margin-left: auto;
+    margin-right: auto;
     color:rgb(78, 116, 90);
-    font-weight:bold;
+    /*font-weight:bold;*/
     text-decoration: underline;
     /*background-color:rgb(78, 116, 90)*/
 }
@@ -86,8 +86,8 @@ section.top-page {
 
 .table-container{
     font-size:  18px;
-    font-family: 'Arial', cursive;
-    width:83%;
+    font-family: 'Calibri', cursive;
+    width:60%;
     border: 1px;
     margin-left: auto;
     margin-right: auto ;
@@ -95,38 +95,33 @@ section.top-page {
     /*border: 2px solid black;*/
 }
 .map-container{
-    border: 2px solid black;
+    /*border: 2px solid black;*/
     /*width:140%;
     height:80%;*/
     margin-left: auto;
     margin-right: auto ;
     margin-top: 20px;
     margin-bottom: 20px;
-    padding: 20px;*/
-    box-shadow: 20px 20px 20px rgb(78, 116, 90);
+    padding: 20px;
+    box-shadow: 2px 2px 2px rgb(178, 178, 178);
 
 }
 .key-container{
-    font-size:  18px;
-    font-family: 'Arial', cursive;
-
-
+    font-size:  16px;
+    font-family: 'Sans-Serif', cursive;
 }
 .button-container{
-    font-size:  18px;
-    font-family: 'Arial', cursive;
-    color: white
+    font-size:  16px;
+    font-family: 'Calibri', cursive;
+    color: white;
     background-color:rgb(78, 116, 90);
 }
 .key-cell{
-    font-size:  18px;
-    font-family: 'Arial', cursive;
-    color: grey
-    background-color:white;
+    font-size:  22px;
+    font-family: 'Calibri', cursive;
+    color: rgb(119, 99, 99);
 }
 .val-cell{
     font-size:  18px;
     font-family: 'Monospace', cursive;
-    font-color: red
-    background-color:red;
 }
